--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^11.0.1",
-    "@fastify/swagger": "^9.4.2",
-    "fastify": "^5.2.2",
-    "fastify-sqlite": "^1.1.0",
-    "mongodb": "^6.15.0"
+    "@fastify/cors": "^8.5.0",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^2.1.0",
+    "@fastify/websocket": "^9.0.0",
+    "better-sqlite3": "^11.9.1",
+    "fastify": "^4.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
