--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fastify/websocket": "^9.0.0",
     "better-sqlite3": "^11.9.1",
     "fastify": "^4.17.0",
+    "uuid": "^11.1.0",
     "ws": "^8.18.1"
   },
   "devDependencies": {
