--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^2.1.0",
     "@fastify/websocket": "^9.0.0",
+    "autoprefixer": "^10.4.21",
     "better-sqlite3": "^11.9.1",
     "fastify": "^4.17.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "uuid": "^11.1.0",
     "ws": "^8.18.1"
   },
